# NN-Interpretation

./: .gitignore  README.md  pyproject.toml  requirements.txt
documents/: Redundancy in feedforward networks.docx  ~$dundancy in feedforward networks.docx
examples/: 1_layer.ipynb  2_layers.ipynb  3_layers.ipynb  deernet.ipynb  example.ipynb  test_signal_gen.ipynb  train_denoiser.py
src/nn_interpretation/: __init__.py  config.py  datasets.py  descramble.py  modeling.py  noise.py  signal_generator.py  signals.py  visualization.py
tests/: test_datasets_and_visualization.py  test_modeling.py  test_signals_and_noise.py
